appId: ${APP_ID}
---
- clearState
- launchApp
- assertVisible: 'American Scores Coach App'
- assertVisible: "Let's Get Started "
- tapOn: "Let's Get Started "
- assertVisible: 'Sign In'
